# Rover_2020_2021

./: README.md  topic_transport_senders.launch
software/: README.md  ground_station_setup.sh  rover_setup.sh
software/firmware/AtmosphericNodeV2/: AtmosphericNodeV2.ino
software/firmware/MotorNodeV4/: MotorNodeV4.ino
software/firmware/Motor_Node_Sci_Mech/: Motor_Node_Sci_Mech.ino
software/firmware/PanTiltNodeChassisV2/: PanTiltNodeChassisV2.ino
software/firmware/PanTiltNodeTowerV2/: PanTiltNodeTowerV2.ino
software/firmware/ScienceMechanismV1/: ScienceMechanismV1.ino
software/firmware/TowerNodeV2/: TowerNodeV2.ino
software/firmware/archive/MR1819_science/: MR1819_science.ino
software/firmware/archive/chassis_pan_tilt/: MR1819_chassis_pan_tilt.ino
software/firmware/archive/libraries/CSTS/: CSTS.h  average.h
software/firmware/archive/libraries/modbus/: ModbusRtu.h
software/firmware/archive/mining/: mining.ino
software/firmware/archive/tower/: MR1819_tower.ino
software/firmware/irisV2/: irisV2.ino
software/firmware/libraries/pothos/: data_store.h  library.properties  motorMasterTest.py  pothos.h  rover20_comms.py
software/ros_examples/action_turtle_py/: CMakeLists.txt  package.xml
software/ros_examples/hello_ros/: CMakeLists.txt  hello_ros_node.py  package.xml
software/ros_examples/simple_ps/: CMakeLists.txt  package.xml
software/ros_examples/simple_ps/msg/: SimpleMessage.msg
software/ros_examples/simple_ps/src/: msg_publisher.py  msg_subscriber.py  simple_publisher.py  simple_subscriber.py
software/ros_examples/turtlesim_demo/: CMakeLists.txt  package.xml
software/ros_packages/ground_station/: CMakeLists.txt
software/ros_packages/ground_station/scripts/: ground_station_launch.sh  ground_station_single_screen_launch.sh
software/ros_packages/ground_station/src/: Science_software5.py  fake_ground_station_single_screen.py  ground_station.py  ground_station_single_screen.py  interface.ui  key  mumu.py  mumu2.py  test_ground_station.py
software/ros_packages/nimbro_topic_transport/: CMakeLists.txt
software/ros_packages/nimbro_topic_transport/launch/: camera_topics4.yaml  camera_topics5.yaml  udp_camera_receiver.launch
software/ros_packages/rover_arm/: CMakeLists.txt
software/ros_packages/rover_arm/example/ros_control_example/: README.md
software/ros_packages/rover_arm_ik/: README.md
software/ros_packages/rover_arm_ik/fake_ros_control/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/fake_ros_control/config/: arm_controller.yaml  hardware.yaml
software/ros_packages/rover_arm_ik/fake_ros_control/include/fake_ros_control/: fake_hw_interface.h
software/ros_packages/rover_arm_ik/fake_ros_control/launch/: fake_arm_control.launch
software/ros_packages/rover_arm_ik/fake_ros_control/src/: fake_hw_interface.cpp  fake_hw_interface_node.cpp
software/ros_packages/rover_arm_ik/joint_parser/: CMakeLists.txt
software/ros_packages/rover_arm_ik/rover_arm_control/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/rover_arm_control/arm_hw_interface/: arm__hw_interface.cpp  arm_hw_interface.cpp  arm_hw_interface.h  arm_hw_interface_node.cpp  arm_state.cpp  arm_state.h
software/ros_packages/rover_arm_ik/rover_arm_control/config/: arm_controller.yaml  arm_joint_names.yaml  hardware.yaml
software/ros_packages/rover_arm_ik/rover_arm_control/controllers/: arm_controller.yaml
software/ros_packages/rover_arm_ik/rover_arm_control/launch/: arm_control.launch
software/ros_packages/rover_arm_ik/rover_arm_control/msg/: IKControlMessage.msg
software/ros_packages/rover_arm_ik/rover_arm_description/launch/: arm_upload.launch
software/ros_packages/rover_arm_ik/rover_arm_description/urdf/: mr1920_arm_urdf_export.urdf  rover_arm.urdf
software/ros_packages/rover_arm_ik/rover_arm_gazebo/controller/: arm_controller.yaml
software/ros_packages/rover_arm_ik/rover_arm_gazebo/launch/: arm.launch  sim.launch
software/ros_packages/rover_arm_ik/rover_arm_ikfast_arm_plugin/: CMakeLists.txt  package.xml  rover_arm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
software/ros_packages/rover_arm_ik/rover_arm_ikfast_arm_plugin/src/: rover_arm_arm_ikfast_moveit_plugin.cpp  rover_arm_arm_ikfast_solver.cpp
software/ros_packages/rover_arm_ik/rover_arm_ikfast_plugin/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/rover_arm_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  rover_arm.srdf
software/ros_packages/rover_arm_ik/rover_arm_moveit_config/launch/: moveit.launch  planning_context.launch  rover_arm_moveit_planning_execution.launch  rover_ik_rviz.py  rover_ik_rviz.sh  sim_control.launch  stomp_planning_pipeline.launch.xml  ui_test.launch
software/ros_packages/rover_arm_moveit_config/: .setup_assistant
software/ros_packages/rover_arm_moveit_config/launch/: planning_context.launch
software/ros_packages/rover_camera/launch/: example.launch
software/ros_packages/rover_camera/src/: rover_camera.cpp
software/ros_packages/rover_control/msg/: CameraControlMessage.msg  DrillControlMessage.msg  MiningControlMessage.msg  MiningStatusMessage.msg
software/ros_packages/rover_control/src/chassis_pan_tilt_control/: chassis_pan_tilt_control.py  chassis_pan_tilt_tester.py
software/ros_packages/rover_control/src/control_coordinators/: drive_coordinator.py
software/ros_packages/rover_control/src/drive_control/: drive_control.py  drive_control_test.py
software/ros_packages/rover_control/src/effectors_control/: effectors_control.py  effectors_tester.py  emergency_scale.py
software/ros_packages/rover_main/: CMakeLists.txt
software/ros_packages/rover_main/launch/: ground_station.launch  ground_station_single_screen.launch
software/ros_packages/rover_odometry/: CMakeLists.txt
software/ros_packages/rover_odometry/src/: odometry.py
software/ros_packages/rover_science/src/: rover_science_node.py
software/ros_packages/rover_status/: CMakeLists.txt
software/ros_packages/rover_status/src/: camera_2_updater.py  rover_statuses.py
(+77 files in other folders)
