<?xml version="1.0"?>
<package format="2">
  <name>rover_arm_control</name>
  <version>0.0.0</version>
  <description>Ros Control package for rover arm autonomy based on code from the UR5 robot + PikNik Robotics</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kopchok@oregonstate.edu">Kira Kopcho</maintainer>
  <!-- add team members in once I get emails :D-->


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!--URLS of resource code used-->
  <url type="UR Modern Driver">https://github.com/ros-industrial/ur_modern_driver</url>
  <url type="PikNik Robotics ros_control_boilerplate">https://github.com/PickNikRobotics/ros_control_boilerplate/tree/kinetic-devel</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>transmission_interface</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
